--- a/phonegap/www/views/events.html
+++ b/phonegap/www/views/events.html
@@ -9,15 +9,15 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
 
         <!-- Start of CSS -->
-        <link rel="stylesheet" type="text/css" href="/css/core.css" />
-        <link rel="stylesheet" type="text/css" href="/css/events.css" />
-        <link rel="stylesheet" type="text/css" href="/css/icons.css" />
+        <link rel="stylesheet" type="text/css" href="../css/core.css" />
+        <link rel="stylesheet" type="text/css" href="../css/events.css" />
+        <link rel="stylesheet" type="text/css" href="../css/icons.css" />
 
         <!-- Start of Javascript -->
-        <script type="text/javascript" src="/phonegap.js"></script>
-        <script type="text/javascript" src="/js/jquery.js"></script>
-        <script type="text/javascript" src="/js/center.js"></script>
-        <script type="text/javascript" src="/js/events.js"></script>
+        <script type="text/javascript" src="phonegap.js"></script>
+        <script type="text/javascript" src="../js/jquery.js"></script>
+        <script type="text/javascript" src="../js/center.js"></script>
+        <script type="text/javascript" src="../js/events.js"></script>
         <script type="text/javascript">
             $(function() {
                 app.initialize();
