--- a/phonegap/www/views/events.html
+++ b/phonegap/www/views/events.html
@@ -16,7 +16,11 @@
         <!-- Start of Javascript -->
         <script type="text/javascript" src="phonegap.js"></script>
         <script type="text/javascript" src="../js/jquery.js"></script>
+        <script type="text/javascript" src="../js/fastclick.js"></script>
         <script type="text/javascript" src="../js/center.js"></script>
+        <script type="text/javascript" src="../js/core.js"></script>
+
+        <!-- Start of Javascript: Page Specific -->
         <script type="text/javascript" src="../js/events.js"></script>
         <script type="text/javascript">
             $(function() {
@@ -28,9 +32,9 @@
         <!-- Start of Body -->
         <div id="header">
             <div class="container">
-                <a href="/" class="menu fa fa-bars"></a>
+                <a href="/" class="icon menu fa fa-bars"></a>
                 <div class="logo">moment</div>
-                <div class="post fa fa-pencil-square-o"></div>
+                <div class="icon post fa fa-pencil-square-o"></div>
             </div>
         </div>
         <div id="events">
