--- a/phonegap/www/css/core.css
+++ b/phonegap/www/css/core.css
@@ -50,6 +50,12 @@ body {
     font-size: 18px;
     margin: 0;
     padding: 0;
+    opacity: 0;
+    transition: opacity 1s ease-in 0, opacity 0.3s ease-out 0;
+}
+
+body.visible {
+    opacity: 1;
 }
 
 /* Shift Font */
@@ -87,7 +93,7 @@ body {
     margin: 0 auto;
     text-align: center;
     font-family: Shift;
-    padding: 10px 0;
+    padding: 12px 0;
 }
 
 #header .icon {
