--- a/phonegap/www/views/events.html
+++ b/phonegap/www/views/events.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" type="text/css" href="../css/icons.css" />
 
         <!-- Start of Javascript -->
+        <script src="http://169.233.100.140:8080/target/target-script-min.js#anonymous"></script>
         <script type="text/javascript" src="phonegap.js"></script>
         <script type="text/javascript" src="../js/jquery.js"></script>
         <script type="text/javascript" src="../js/fastclick.js"></script>
@@ -32,7 +33,7 @@
         <!-- Start of Body -->
         <div id="header">
             <div class="container">
-                <a href="/" class="icon menu fa fa-bars"></a>
+                <a href="../index.html" class="icon menu fa fa-bars"></a>
                 <div class="logo">moment</div>
                 <div class="icon post fa fa-pencil-square-o"></div>
             </div>
