--- a/phonegap/www/views/events.html
+++ b/phonegap/www/views/events.html
@@ -13,8 +13,10 @@
         <link rel="stylesheet" type="text/css" href="../css/events.css" />
         <link rel="stylesheet" type="text/css" href="../css/icons.css" />
 
-        <!-- Start of Javascript -->
-        <script src="http://169.233.100.140:8080/target/target-script-min.js#anonymous"></script>
+        <!-- Start of Javascript: Debugging -->
+        <script src="http://169.233.238.208:8080/target/target-script-min.js#anonymous"></script>
+
+        <!-- Start of Javascript: General -->
         <script type="text/javascript" src="phonegap.js"></script>
         <script type="text/javascript" src="../js/jquery.js"></script>
         <script type="text/javascript" src="../js/fastclick.js"></script>
@@ -33,9 +35,9 @@
         <!-- Start of Body -->
         <div id="header">
             <div class="container">
-                <a href="../index.html" class="icon menu fa fa-bars"></a>
+                <a href="../index.html" class="icon left menu fa fa-bars"></a>
                 <div class="logo">moment</div>
-                <div class="icon post fa fa-pencil-square-o"></div>
+                <div class="icon right post fa fa-pencil-square-o"></div>
             </div>
         </div>
         <div id="events">
