--- a/phonegap/www/css/core.css
+++ b/phonegap/www/css/core.css
@@ -1,8 +1,25 @@
 /* Basic Formatting */
 * {
     outline: none;
+    -webkit-user-select: none;
+    -webkit-touch-callout: none;
+    -webkit-text-size-adjust: none;
     -webkit-tap-highlight-color: rgba(0,0,0,0);
     -webkit-font-smoothing: subpixel-antialiased;
+}
+
+body {
+    background-color: #fff;
+    font-family: 'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
+    font-size: 18px;
+    margin: 0;
+    padding: 0;
+    opacity: 0;
+    transition: opacity 1s ease-in 0, opacity 0.3s ease-out 0;
+}
+
+body.visible {
+    opacity: 1;
 }
 
 ul {
@@ -41,21 +58,8 @@ iframe {
     border: none;
 }
 
-body {
-    -webkit-touch-callout: none;    /* prevent callout to copy image, etc when tap to hold */
-    -webkit-text-size-adjust: none; /* prevent webkit from resizing text to fit */
-    -webkit-user-select: none;      /* prevent copy paste, to allow, change 'none' to 'text' */
-    background-color: #fff;
-    font-family: 'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
-    font-size: 18px;
-    margin: 0;
-    padding: 0;
-    opacity: 0;
-    transition: opacity 1s ease-in 0, opacity 0.3s ease-out 0;
-}
-
-body.visible {
-    opacity: 1;
+.hidden {
+    display: none;
 }
 
 /* Shift Font */
@@ -77,7 +81,7 @@ body.visible {
     color: #3e3e3e;
     background: #fff;
     padding: 15px 0 0 0;
-    box-shadow: 0 3px 0 rgba(255, 255, 255, 0.4);
+    box-shadow: 0 3px 0 rgba(0, 0, 0, 0.1);
 }
 
 #header .container {
@@ -107,10 +111,10 @@ body.visible {
     color: #4586F5;
 }
 
-#header .menu {
+#header .left {
     left: 0;
 }
 
-#header .post {
+#header .right {
     right: 0;
 }
