--- a/phonegap/www/css/index.css
+++ b/phonegap/www/css/index.css
@@ -2,7 +2,7 @@
     text-align: center;
 }
 
-#popup .logo {
+#popup > .logo {
     width: 100px;
     height: 100px;
     margin-bottom: 15px;
@@ -24,6 +24,7 @@
 
 #popup .button {
     width: 100%;
+    height: 55px;
     text-align: center;
     color: #3e3e3e;
     background: #fff;
@@ -37,9 +38,24 @@
 
 #popup .button .icon {
     float: left;
-    padding: 15px;
+    text-align: center;
+    width: 45px;
+    padding: 15px 0;
     border-right: solid 2px #3e3e3e;
     height: 100%;
+    box-sizing: border-box;
+}
+
+#popup .button .icon .spinner {
+    display: none;
+}
+
+#popup .button.activated .icon .logo {
+    display: none;
+}
+
+#popup .button.activated .icon .spinner {
+    display: inherit;
 }
 
 #popup .button .text {
